<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background_gradient"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:contentDescription="@string/game_iconic_picture"
            android:src="@drawable/brain_image_two"/>

        <TextView
            android:id="@+id/brain_suid_game_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/caesar_dressing"
            android:gravity="center"
            android:text="@string/game_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/play_game_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/button_color"
            app:cardCornerRadius="30dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/alfa_slab_one"
                        android:gravity="center"
                        android:text="@string/game_1_name"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                    <ImageView
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="7dp"
                        android:contentDescription="@string/iconic_play"
                        android:src="@drawable/ic_baseline_play_circle_outline_24_white"
                        tools:ignore="RtlHardcoded" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/play_game_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/button_color"
            app:cardCornerRadius="30dp">

                    <TextView
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/game_2_name"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                    <ImageView
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="7dp"
                        android:contentDescription="@string/iconic_play"
                        android:src="@drawable/ic_baseline_play_circle_outline_24_white"
                        tools:ignore="RtlHardcoded" />

        </androidx.cardview.widget.CardView>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/play_game_3"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_marginStart="30dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginEnd="30dp"-->
<!--            android:layout_weight="1"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            app:cardBackgroundColor="@color/button_color"-->
<!--            app:cardCornerRadius="30dp">-->

<!--                    <TextView-->
<!--                        android:fontFamily="@font/alfa_slab_one"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:gravity="center"-->
<!--                        android:text="@string/game_3_name"-->
<!--                        android:textColor="@color/white"-->
<!--                        android:textSize="25sp" />-->

<!--                    <ImageView-->
<!--                        android:layout_gravity="right"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:layout_marginEnd="7dp"-->
<!--                        android:contentDescription="@string/iconic_play"-->
<!--                        android:src="@drawable/ic_baseline_play_circle_outline_24_white"-->
<!--                        tools:ignore="RtlHardcoded" />-->

<!--        </androidx.cardview.widget.CardView>-->


        <androidx.cardview.widget.CardView
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/button_color"
            app:cardCornerRadius="30dp">

                    <TextView
                        android:fontFamily="@font/alfa_slab_one"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/exit"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>