<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/page_background_gradient"
    tools:context=".LevelCompeletActivity">
    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="30dp" >

        <LinearLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="60dp">

            <ImageView
                android:id="@+id/complete_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/complete_star_3" />

        </LinearLayout>

        <TextView
            android:id="@+id/complete_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/caesar_dressing"
            android:gravity="bottom|center_horizontal"
            android:text="@string/string_congratulations"
            android:textColor="#FFC400"
            android:textSize="33sp"
            android:visibility="visible" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="100dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#4CAF50">

        <TextView
            android:id="@+id/level_complate_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alfa_slab_one"
            android:gravity="center"
            android:text="@string/level_complete"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="100dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#FFC400">

        <TextView
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alfa_slab_one"
            android:gravity="center"
            android:text="@string/string_level_failed"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/complete_home"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="40dp"
            android:src="@drawable/ic_home_back" />

        <ImageView
            android:id="@+id/complete_retry"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_restart" />

        <ImageView
            android:id="@+id/complete_next"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/ic_next_level" />

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center_horizontal"
        android:layout_marginBottom="40dp">

        <ImageView
            android:layout_marginEnd="40dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_home_back"/>

        <ImageView
            android:layout_marginStart="40dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_restart"/>

    </LinearLayout>


</RelativeLayout>